# ascn-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: bitbuffer.rs  board.rs  fen.rs  filters.rs  lib.rs  main.rs  outcome.rs  permutations.rs  pieces.rs  reader.rs  writer.rs
src/board/: iterator.rs  position.rs
src/filters/: diagonal.rs  knight.rs  straight.rs
src/pieces/: bishop.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs
tests/: large_test.rs
